footer layout issue corrected

--- a/e-commerce/e-commerce/src/components/product-carousel/productembla.css
+++ b/e-commerce/e-commerce/src/components/product-carousel/productembla.css
@@ -12,8 +12,8 @@
     overflow: hidden;
   }
   .Product_embla__container {
-    margin-top: 1.2rem;
-    margin-bottom: 1.2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     max-width: 22rem;
     backface-visibility: hidden;
     display: flex;
